# lock

./: README.md  justfile  lock.sh  pyproject.toml
.a5c/cache/compression/: 4f6821cb786ee507.json
src/lock_screen/: __init__.py  cli.py  effects.py  locker.py  platform_linux.py  platform_macos.py  screenshot.py
