[project]
name = "lock-screen"
version = "0.1.0"
description = "Wayland/X11 lock screen with custom blur and pixelation effects"
readme = "README.md"
authors = [
    { name = "Greg0109", email = "greg.rabago@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lock-screen = "lock_screen.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ruff>=0.15.5",
]
